--- a/package.json
+++ b/package.json
@@ -1,3 +1,4 @@
+
 {
   "name": "template",
   "version": "0.0.0",
@@ -11,11 +12,12 @@
   "dependencies": {
     "cors": "2.8.5",
     "cross-env": "7.0.3",
-    "dotenv": "^16.3.1",
+    "dotenv": "^16.0.1",
     "express": "4.17.1",
-    "joi": "^17.11.0",
+    "joi": "^17.6.0",
+    "mongoose": "^6.3.5",
     "morgan": "1.10.0",
-    "uuid": "^9.0.1"
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "eslint": "7.19.0",
